[tool.poetry]
name = "telegram-notification-system"
version = "1.0.0"
description = "Система уведомлений в Telegram с форматированными сообщениями"
authors = ["Ваше Имя <ваш@email.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <4.0"
python-telegram-bot = "^20.3"
pydantic = "^2.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.0"
pydantic-settings = "^2.0.0"


[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"
isort = ">=5.12.0,<6.0.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
