[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram Notification Bot"
authors = ["You <you@example.com>"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.0"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
